[tool.poetry]
name = "etcd3"
version = "0.13.0"
description = "Python client for the etcd3 API"
readme = "README.rst"
authors = ["Louis Taylor <louis@kragniz.eu>"]
license = "Apache-2.0"
homepage = "https://github.com/kragniz/python-etcd3"
repository = "https://github.com/kragniz/python-etcd3"
keywords = ["etcd3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.9"
dnspython = ">=2.3.0"
grpcio = ">=1.49,<2"
protobuf = ">=3.20,<6"
six = ">=1.16.0"

[tool.poetry.dev-dependencies]
alabaster = ">=0.7.13"
attrs = ">=22.2.0"
babel = ">=2.11.0"
bump2version = ">=1.0.1"
bumpversion = ">=0.6.0"
cachetools = ">=5.3.0"
certifi = ">=2022.12.7"
cffi = ">=1.15.1"
chardet = ">=5.1.0"
charset-normalizer = ">=3.0.1"
click = ">=8.1.3"
colorama = ">=0.4.6"
coverage = { version = ">=7.1.0", extras = ["toml"] }
daiquiri = ">=3.2.1"
distlib = ">=0.3.6"
docutils = ">=0.19"
exceptiongroup = ">=1.1.0"
filelock = ">=3.9.0"
fixtures = ">=4.0.1"
flake8 = ">=6.0.0"
flake8-docstrings = ">=1.7.0"
flake8-import-order = ">=0.18.2"
hypothesis = ">=6.67.1"
idna = ">=3.4"
imagesize = ">=1.4.1"
iniconfig = ">=2.0.0"
jinja2 = ">=3.1.2"
markupsafe = ">=2.1.2"
mccabe = ">=0.7.0"
mock = ">=5.0.1"
more-itertools = ">=5.0.0"
packaging = ">=23.0"
pbr = ">=5.11.1"
pifpaf = ">=3.1.5"
platformdirs = ">=2.6.2"
pluggy = ">=1.0.0"
psutil = ">=5.9.4"
pycodestyle = ">=2.10.0"
pycparser = ">=2.21"
pydocstyle = ">=3.0.0"
pyflakes = ">=3.0.1"
pygments = ">=2.14.0"
pyproject-api = ">=1.5.0"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
python-json-logger = ">=2.0.4"
pytz = ">=2022.7.1"
pyyaml = ">=6.0"
requests = ">=2.28.2"
snowballstemmer = ">=2.2.0"
sortedcontainers = ">=2.4.0"
sphinx = ">=6.1.3"
sphinxcontrib-applehelp = ">=1.0.4"
sphinxcontrib-devhelp = ">=1.0.2"
sphinxcontrib-htmlhelp = ">=2.0.1"
sphinxcontrib-jsmath = ">=1.0.1"
sphinxcontrib-qthelp = ">=1.0.3"
sphinxcontrib-serializinghtml = ">=1.1.5"
tenacity = ">=8.1.0"
tomli = ">=2.0.1"
tox = ">=4.4.4"
urllib3 = ">=1.26.14"
virtualenv = ">=20.17.1"
xattr = ">=0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
