[project]
name = "etcd3"
version = "0.14.0"
description = "Python client for the etcd3 API"
authors = [{ name = "Louis Taylor", email = "louis@kragniz.eu" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "Apache-2.0"
keywords = ["etcd3"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dnspython>=2.3.0",
    "grpcio>=1.76.0,<2",
    "protobuf>=6.31.1,<7",
    "six>=1.16.0",
]

[project.urls]
Homepage = "https://github.com/kragniz/python-etcd3"
Repository = "https://github.com/kragniz/python-etcd3"

[dependency-groups]
dev = [
    "alabaster>=0.7.13",
    "attrs>=22.2.0",
    "babel>=2.11.0",
    "bump2version>=1.0.1",
    "bumpversion>=0.6.0",
    "cachetools>=5.3.0",
    "certifi>=2022.12.7",
    "cffi>=1.15.1",
    "chardet>=5.1.0",
    "charset-normalizer>=3.0.1",
    "click>=8.1.3",
    "colorama>=0.4.6",
    "coverage[toml]>=7.1.0",
    "daiquiri>=3.2.1",
    "distlib>=0.3.6",
    "docutils>=0.19",
    "exceptiongroup>=1.1.0",
    "filelock>=3.9.0",
    "fixtures>=4.0.1",
    "hypothesis>=6.67.1",
    "idna>=3.4",
    "imagesize>=1.4.1",
    "iniconfig>=2.0.0",
    "jinja2>=3.1.2",
    "markupsafe>=2.1.2",
    "mccabe>=0.7.0",
    "mock>=5.0.1",
    "more-itertools>=5.0.0",
    "packaging>=23.0",
    "pbr>=5.11.1",
    "pifpaf>=3.4.0",
    "platformdirs>=2.6.2",
    "pluggy>=1.0.0",
    "psutil>=5.9.4",
    "pycodestyle>=2.10.0",
    "pycparser>=2.21",
    "pydocstyle>=3.0.0",
    "pyflakes>=3.0.1",
    "pygments>=2.14.0",
    "pyproject-api>=1.5.0",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "python-json-logger>=2.0.4",
    "pytz>=2022.7.1",
    "pyyaml>=6.0",
    "requests>=2.28.2",
    "ruff>=0.14.9",
    "snowballstemmer>=2.2.0",
    "sortedcontainers>=2.4.0",
    "sphinx>=6.1.3",
    "sphinxcontrib-applehelp>=1.0.4",
    "sphinxcontrib-devhelp>=1.0.2",
    "sphinxcontrib-htmlhelp>=2.0.1",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=1.0.3",
    "sphinxcontrib-serializinghtml>=1.1.5",
    "tenacity>=8.1.0",
    "tomli>=2.0.1",
    "urllib3>=1.26.14",
    "virtualenv>=20.17.1",
    "xattr>=0.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
builtins = ["long"]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "dist",
    "docs",
    "*lib/python*",
    "*egg",
    "build",
    "etcd3/etcdrpc/",
    "tests/",
    "etcd3/"
]
lint.ignore = ["D1"]
lint.select = [
    "C9",
    "D",
    "E",
    "F",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
